--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -1,57 +1,128 @@
-.drawer {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: -100%;
-  width: 40%;
+.drawerWrapper {
+  width: 100vw;
   height: 100vh;
-  padding: 1rem;
-  background-color: #c2c2c2;
-  border: 1px solid gray;
+  position: fixed;
+  top: 0;
+  z-index: -1;
+  background-color: #e8e8e82b;
 
-  .editor {
-    padding: 0 1rem;
-    border: 1px solid #ccc;
-    background-color: #fff;
-  }
+  .drawer {
+    position: fixed;
+    top: 0;
+    left: -40%;
+    width: 40%;
+    height: 100vh;
+    padding: 1rem;
+    background-color: #c2c2c2;
+    border: 1px solid gray;
+    transition: left ease 0.3s;
+    overflow: auto;
 
-  h2 {
-    margin-bottom: 1rem;
-  }
-
-  .actions {
-    text-align: end;
-    button {
-      cursor: pointer;
-    }
-  }
-
-  .toolbar {
-    margin-bottom: 0;
-  }
-
-  .wrapper {
-    margin-bottom: 1rem;
-  }
-
-  table {
-    width: 100%;
-    border: 1px solid black;
-  }
-
-  .options {
-    margin-top: 1rem;
-
-    button {
-      cursor: pointer;
+    .editor {
+      padding: 0 1rem;
+      border: 1px solid #ccc;
+      background-color: #fff;
     }
 
-    .addOptButton {
+    h2 {
+      margin-bottom: 1rem;
+    }
+
+    .actions {
+      text-align: end;
+      button {
+        cursor: pointer;
+      }
+    }
+
+    .toolbar {
+      margin-bottom: 0;
+    }
+
+    .wrapper {
+      margin-bottom: 1rem;
+    }
+
+    .checkboxContainer {
+      display: flex;
+      align-items: center;
+      margin-left: .25rem;
+
+      .checkbox {
+        width: 1.5rem;
+        height: 1.5rem;
+        cursor: pointer;
+
+      }
+      label {
+        margin-left: 1rem;
+        user-select: none;
+        cursor: pointer;
+
+      }
+    }
+   
+
+    .options {
       margin-top: 1rem;
+
+      .addOptButton {
+        margin: 1rem 0;
+        background-color: #00b600;
+        box-shadow: 0 0 4px green;
+        border: none;
+        width: 36px;
+        height: 36px;
+        border-radius: 6px;
+        transition: all ease 0.25s;
+
+        &:hover {
+          background-color: green;
+        }
+      }
+
+      table {
+        width: 100%;
+
+        input {
+          border: 2px solid gray;
+          border-radius: 4px;
+          padding: 0.5rem;
+
+          &:focus {
+            outline: none;
+          }
+        }
+
+        td:last-of-type {
+          text-align: center;
+          .delOptButton {
+            background-color: #eb2626;
+            box-shadow: 0 0 2px red;
+            border: none;
+            width: 36px;
+            height: 36px;
+            border-radius: 6px;
+            transition: all ease 0.25s;
+
+            &:hover {
+              background-color: #a60000;
+            }
+          }
+        }
+      }
+
+      label {
+        margin-left: 1rem;
+      }
     }
+  }
+
+  .drawer.edit {
+    left: 0;
   }
 }
 
-.drawer.edit {
-  left: 0;
+.drawerWrapper.edit {
+  z-index: 1;
 }
