--- a/src/index.scss
+++ b/src/index.scss
@@ -18,7 +18,7 @@ body {
   -webkit-font-smoothing: antialiased;
   font-family: 'Times New Roman', Times, serif;
   background: #dfdfdf;
-  color: #252525;
+  color: #434343;
 }
 
 img,
@@ -35,6 +35,11 @@ button,
 textarea,
 select {
   font: inherit;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
 }
 
 p,
