--- a/src/components/FormElement/FormElement.module.scss
+++ b/src/components/FormElement/FormElement.module.scss
@@ -20,6 +20,7 @@
         border: none;
         cursor: pointer;
         margin-right: 1rem;
+        border-radius: 8px;
     
         &:hover {
           background-color: #44444430;
